# EconomicSimulator

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  compile_commands.json  core.904  git config --global userhashimoto  git config --global userhashimoto.pub
.VSCodeCounter/2026-07-06_12-44-03/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.devcontainer/: Dockerfile  devcontainer.json
include/: config.hpp  helper.hpp
include/analysis/: analysis.hpp  analyzer.hpp  context_task.hpp  data_manager.hpp  pipeline.hpp
include/components/: common.hpp  goods_demander.hpp  goods_supplier.hpp  labor_demander.hpp  labor_supplier.hpp
include/config/: contract.hpp  init_setup.hpp  sim_vars.hpp
include/core/: base.hpp  engine.hpp  forward.hpp
include/helper/: random.hpp  util.hpp
include/strategies/: common.hpp  goods_demander.hpp  goods_supplier.hpp  labor_demander.hpp  labor_supplier.hpp  orchestrator.hpp  updates_loggings.hpp
include/strategies/goods_demander/: after_trade.hpp  level1.hpp  level2.hpp  request.hpp
include/strategies/goods_supplier/: calc_employ.hpp  level1.hpp  level2.hpp  level3.hpp  posting.hpp  trade.hpp
include/strategies/internal/: goods_supplier.hpp
include/strategies/labor_demander/: lay_offs.hpp  level1.hpp  level2.hpp  offer.hpp  posting.hpp  register.hpp
include/strategies/labor_supplier/: accept.hpp  entry.hpp  level1.hpp  level2.hpp  product.hpp
include/strategies/orchestrator/: goods.hpp  labor.hpp
include/world/: message.hpp
scripts/: load.py  main.py  plot.py
src/: components.cpp  main.cpp
src/analysis/: pipeline.cpp
src/engine/: initialize.cpp  run.cpp
src/strategies/: orchestrator.cpp  updates.cpp  updates_loggings.cpp
src/strategies/goods_demander/: afterTrade.cpp  after_trade.cpp  level1.cpp  level2.cpp  request.cpp
src/strategies/goods_supplier/: calc_employ.cpp  level1.cpp  level2.cpp  level3.cpp  posting.cpp  trade.cpp
src/strategies/labor_demander/: lay_offs.cpp  level1.cpp  level2.cpp  offer.cpp  posting.cpp  register.cpp
src/strategies/labor_supplier/: accept.cpp  entry.cpp  level1.cpp  level2.cpp  product.cpp
src/strategies/orchestrator/: goods.cpp  labor.cpp
tests/goods_supplier/: calc_employ.cpp
tests/labor_demander/: lay_offs.cpp
